Main content with rounded corners has been added.

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,4 +1,10 @@
 .mainBody{
-    margin-top:200px;
-    background-color: yellow;
+ 
+    margin: 100px 250px;
+    border-radius: 25px;
+    border: 2px solid #73AD21;
+    padding: 20px;
+    width: 1303px;
+    height: 703px;
+   
 }
