--- a/Styles/style.css
+++ b/Styles/style.css
@@ -13,6 +13,11 @@
    font-size: 20px;
    font-weight: solid;
 }
+.footer{
+   margin: 34px 0px 0px 771px;
+   font-weight: solid;
+   
+}
 h1{
     color:#292929;
     font-size:36px;
